<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sideMenu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Button
        android:id="@+id/jumpToMarker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="12dp"
        android:text="@string/jump_to_marker"
        android:textColor="@color/white"
        app:backgroundTint="@color/black"
        app:cornerRadius="0dp"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/openSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:backgroundTint="@color/black"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        app:cornerRadius="0dp"
        android:padding="12dp"
        android:layout_margin="0dp"
        android:text="@string/open_settings"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"/>

    <Button
        android:id="@+id/joinParty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/gray"
        app:backgroundTint="@color/black"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp"
        app:cornerRadius="0dp"
        android:padding="12dp"
        android:layout_margin="0dp"
        android:text="@string/join_party"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"/>

</LinearLayout>